--- a/tos/index.html
+++ b/tos/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=700">
 		<style type="text/css">
-			body{font:16px arial;color:#FFF;line-height:22px;background-color:#2B2B2B;padding:0 10px;}h1{text-align:center;}a{text-decoration:none;font-weight:700;color:#FFF;}
+			body{font:16px arial;padding:0 20px 20px 20px;}h1{text-align:center;}a{text-decoration:none}
 		</style>
 	<body>
 		<h1><a href="/">catz.thirdletter.com</a> Terms of Service Agreement</h1>
