change catz.thirdletter.com to Catz in title

--- a/tos/index.html
+++ b/tos/index.html
@@ -8,7 +8,7 @@
 			body{font:16px arial;padding:0 20px 20px 20px;}h1{text-align:center;}a{text-decoration:none;color:inherit}p{line-height:1.5em}
 		</style>
 	<body>
-		<h1><a href="/">catz.thirdletter.com</a> Terms of Service Agreement</h1>
+		<h1><a href="/">Catz</a> Terms of Service Agreement</h1>
 		<p>Welcome to <a href="/">catz.thirdletter.com</a>. By using (the "Service") <a href="/">catz.thirdletter.com</a> (the "Web site") you agree to be bound by this Terms of Service Agreement (this "Agreement").</p>
 		<p>This Agreement sets out the legally binding terms of your use of this Web site and its services, and may be modified by <a href="/">catz.thirdletter.com</a> at any time without prior notice. Such modifications will be effective upon posting by <a href="/">catz.thirdletter.com</a>. This agreement includes <a href="/">catz.thirdletter.com</a> acceptable use policy for Content (the "Content") posted or accessed trough the Web site, <a href="/">catz.thirdletter.com</a> Privacy Policy, and any notices regarding the Web site.</p>
 		<h3>ELIGIBILITY</h3>
