--- a/tos/index.html
+++ b/tos/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 	<head>
-		<title>Catz | Terms</title>
+
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=700">
+		<title>Catz | Terms</title>
+		
 		<style type="text/css">
 			body{font:16px arial;padding:0 20px 20px 20px;}h1{text-align:center;}a{text-decoration:none;color:inherit}p{line-height:1.5em}
 		</style>
+
 	<body>
+
 		<h1><a href="/">Catz</a> Terms of Service Agreement</h1>
 		<p>Welcome to <a href="/">omgcatz.com</a>. By using (the "Service") <a href="/">omgcatz.com</a> (the "Web site") you agree to be bound by this Terms of Service Agreement (this "Agreement").</p>
 		<p>This Agreement sets out the legally binding terms of your use of this Web site and its services, and may be modified by <a href="/">omgcatz.com</a> at any time without prior notice. Such modifications will be effective upon posting by <a href="/">omgcatz.com</a>. This agreement includes <a href="/">omgcatz.com</a> acceptable use policy for Content (the "Content") posted or accessed trough the Web site, <a href="/">omgcatz.com</a> Privacy Policy, and any notices regarding the Web site.</p>
@@ -30,5 +34,16 @@
 		<h3>OTHER</h3>
 		<p>This Agreement, accepted upon use of the Web site, contains the entire agreement between you and <a href="/">omgcatz.com</a> regarding the use of the Web site and/or the Service. The failure of <a href="/">omgcatz.com</a> to exercise or enforce any right or provision of these Terms of Service shall not constitute a waiver of such right or provision. If any provision of this Agreement is held invalid, the remainder of this Agreement shall continue in full force and effect. The section titles in these Terms of Service are for convenience only and have no legal or contractual effect.</p>
 		<h3>I HAVE READ THIS AGREEMENT AND AGREE TO ALL OF THE PROVISIONS CONTAINED ABOVE.</h3>
+	
 	</body>
+
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-36603722-3', 'auto');
+		ga('send', 'pageview');
+	</script>
 </html>
