--- a/tos.html
+++ b/tos.html
@@ -7,8 +7,9 @@
 	<title>Catz | Terms</title>
 	
 	<style type="text/css">
-		body{font:16px arial;padding:0 20px 20px 20px;}h1{text-align:center;}a{text-decoration:none;color:inherit}p{line-height:1.5em}
+		body{font:16px arial;padding:0 20px 20px 20px}h1{text-align:center}a{text-decoration:none;color:inherit}p{line-height:1.5em}
 	</style>
+
 <body>
 
 	<h1><a href="/">Catz</a> Terms of Service Agreement</h1>
