remove bad link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       <!-- ask for some financial help -->
       <div id="donate" class="modal hidden">
-        <p>This website gets traffic... a lot of it, and, due to special kittens, it requires fairly strong (read: expensive) <a href="//en.wikipedia.org/wiki/Virtual_private_server">servers</a> to keep it from crashing. I&rsquo;ve also spent a considerable amount of my time <a href="//github.com/omgcatz/">developing</a> it. Thus, I <a href="//www.youtube.com/v/w6XO9tIceLA?autoplay=1">display ads and accept donations</a>. You can donate via <a href="//cash.me/$catz">Square Cash</a> (donate@omgcatz.com) if you&rsquo;re feeling supportive and can afford it.</p>
+        <p>This website gets traffic... a lot of it, and, due to special kittens, it requires fairly strong (read: expensive) <a href="//en.wikipedia.org/wiki/Virtual_private_server">servers</a> to keep it from crashing. I&rsquo;ve also spent a considerable amount of my time <a href="//github.com/omgcatz/">developing</a> it. Thus, I display ads and accept donations. You can donate via <a href="//cash.me/$catz">Square Cash</a> (donate@omgcatz.com) if you&rsquo;re feeling supportive and can afford it.</p>
         <p>Thank you kindly.</p>
         <a class="md-close">close</a>
       </div>
