update adblock text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <!-- google ad /: -->
   <div id="money-wrapper">
-    <h4>I agree&mdash;ads are annoying.<br><a class="md-trigger" data-modal="donate">Click here for more info.</a></h4>
+    <h4>I block them, too.<br><a class="md-trigger" data-modal="donate">Click here for more info.</a></h4>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins id="money" class="adsbygoogle" data-ad-client="ca-pub-4166408543945956" data-ad-slot="1162321024"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
