update domain name

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Catz">
   <meta property="og:description" content="If only there was something furry to enjoy while you listen to your jams. We have just what you need&mdash;free kittens.">
-  <meta property="og:url" content="http://omgcatz.com">
-  <meta property="og:image" content="http://omgcatz.com/img/omgcatz-share.jpg">
+  <meta property="og:url" content="http://catz.io">
+  <meta property="og:image" content="http://catz.io/img/omgcatz-share.jpg">
 
   <!-- twitter card -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Catz">
   <meta name="twitter:description" content="If only there was something furry to enjoy while you listen to your jams. We have just what you need&mdash;free kittens.">
-  <meta name="twitter:url" content="http://omgcatz.com">
-  <meta name="twitter:image" content="http://omgcatz.com/img/omgcatz-share.jpg">
+  <meta name="twitter:url" content="http://catz.io">
+  <meta name="twitter:image" content="http://catz.io/img/omgcatz-share.jpg">
 
   <!-- favicon -->
   <link rel="icon" type="image/png" href="/favicon.ico">
@@ -79,7 +79,7 @@
 
       <!-- explain the site. kinda -->
       <div id="about" class="modal hidden">
-        <p><i>What is this?</i>This is a cat website (made for cats... like you). With the internet came an unruley amount of cats and cat like things. Along with cats, this website provides you with a whole bunch of music. Music to the eyes, that is, in the form of <a href="javascript:/*_drag_this_link_to_your_bookmarks!_*/ var l=location,h='omgcatz.com';if(l.host!=h)l.href='http://'+h+'#'+encodeURIComponent(l.href)">cats</a>.</p>
+        <p><i>What is this?</i>This is a cat website (made for cats... like you). With the internet came an unruley amount of cats and cat like things. Along with cats, this website provides you with a whole bunch of music. Music to the eyes, that is, in the form of <a href="javascript:/*_drag_this_link_to_your_bookmarks!_*/ var l=location,h='catz.io';if(l.host!=h)l.href='http://'+h+'#'+encodeURIComponent(l.href)">cats</a>.</p>
         <p><i>Why is this?</i>Because obsessively viewing cat pictures while enjoying my favorite music can drastically improve my day. I hope you can find joy from this website, too.</p>
         <p><b>Please post your questions, suggestions and praises to <a href="//www.facebook.com/omgcatzwebsite">this stupid website</a>.</b></p>
         <a class="md-close">close</a>
@@ -150,8 +150,9 @@
     </div>
   </div>
 
-  <!-- script -->
-  <script src="js/main.js" type="text/javascript"></script>
+  <!-- scripts -->
+  <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- helps for downloading meows -->
   <iframe id="download" class="hidden"></iframe>
