Init of silexify

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="If only there was something furry to enjoy while you listen to your jams. We have just what you need&mdash;free kittehs.">
 
   <!-- stylesheet -->
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="web/css/main.css">
 
   <!-- open graph data -->
   <meta property="og:type" content="website">
@@ -31,15 +31,15 @@
   <link rel="icon" type="image/png" href="/favicon.ico">
 
   <!-- apple-touch icons -->
-  <link rel="apple-touch-icon" href="img/icons/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" href="web/img/icons/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="web/img/icons/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="web/img/icons/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="web/img/icons/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="web/img/icons/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="web/img/icons/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="web/img/icons/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="web/img/icons/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="web/img/icons/apple-touch-icon-152x152.png">
 
   <!-- windows-tile icons -->
   <meta name="msapplication-square70x70logo" content="img/icons/smalltile.png">
@@ -108,7 +108,7 @@
 
   <!-- scripts -->
   <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="web/js/main.js"></script>
 
   <!-- helps for downloading meows -->
   <iframe id="download" class="hidden"></iframe>
