es2015 for the electron side of things. yay

--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,6 @@
 <!doctype html>
 <div id="root"></div>
-<script>require('./bundle/app.js');</script>
+<script>
+  require('babel-register');
+  require('./bundle/app.js');
+</script>
