dumb things down

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,3 @@
 <!doctype html>
 <div id="root"></div>
-<script>
-  require('babel-register');
-  require('./bundle/app.js');
-</script>
+<script>require('./bundle/app');</script>
